--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 			<nav>
 				<div class="upper_navbar">
 					
-					
+				<li><a href="main.html">Main</a></li>
 				</div>
 				<div class="lower_navbar">
 					<div class="lower_navbar_content">
