--- a/main.html
+++ b/main.html
@@ -31,6 +31,11 @@
 						<div class="logo">
 							<a href="main.html"><img src="images/mylogo-1.png"></a>
 						</div>
+
+						<div class="logo">
+							<a href="main.html"><img src="images/mylogo-1.png"></a>
+						</div>
+						
 						<ul class="dropdown-menu">
 							<li><a href="">What to do<i class="fas fa-caret-down"></i></a>
 								<ul>
